--- a/index.html
+++ b/index.html
@@ -77,8 +77,16 @@ function sleep(milliseconds) {
         var ct1 = [];
         $.each(window.$d, function ($i, $e) {
           $nos = window.$nos;
-          if ($e[$nos[0]]['ct1'] == '-') {
-            return;
+
+          for (var j = 0; j < $nos.length; j = j + 1) {
+            if ($e[$nos[j]] == undefined) {
+              return;
+            }
+            else {
+              if ($e[$nos[j]]['ct1'] == '-') {
+                return;
+              }
+            }
           }
 
           marks = [$i];
@@ -91,8 +99,16 @@ function sleep(milliseconds) {
         var ct2 = [];
         $.each(window.$d, function ($i, $e) {
           $nos = window.$nos;
-          if ($e[$nos[0]]['ct2'] == '-') {
-            return;
+
+          for (var j = 0; j < $nos.length; j = j + 1) {
+            if ($e[$nos[j]] == undefined) {
+              return;
+            }
+            else {
+              if ($e[$nos[j]]['ct2'] == '-') {
+                return;
+              }
+            }
           }
 
           marks = [$i];
@@ -108,6 +124,19 @@ function sleep(milliseconds) {
           //if ($e[$nos[0]]['ct2'] == '-') {
           //  return;
           //}
+
+          for (var j = 0; j < $nos.length; j = j + 1) {
+            if ($e[$nos[j]] == undefined) {
+              return;
+            }
+            else {
+              if ($e[$nos[j]]['attendance'] == '-') {
+                return;
+              }
+            }
+          }
+
+
 
           m = [$i];
           for (var j = 0; j < $nos.length; j = j + 1) {
@@ -181,7 +210,7 @@ function sleep(milliseconds) {
         s = r.stat;
 
         $.each(s, function($i, $e) {
-          //console.log($e);
+          //console.log(id);
           if (window.$d[$i] == undefined) {
             window.$d[$i] = {}
           }
